syntax = "proto3";

package calculator;

option java_package = "com.thebytecloud.calculator";

option java_multiple_files = true;

//Unary call messages
message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

//Server streaming messages

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

service CalculatorService {
    //Unary call rpc
    rpc Sum(SumRequest) returns (SumResponse) {};

    //Server streaming rpc
    rpc PrimeNumbeDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

}